segunda tela quase completa

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="title_activity_course">CourseActivity</string>
     <string name="courses">Courses</string>
     <string name="search_a_course">Search a course</string>
+    <string name="workload">Workload:</string>
+    <string name="hours">hours</string>
 </resources>
