tela de estudantes quase pronta

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="search_a_course">Search a course</string>
     <string name="workload">Workload:</string>
     <string name="hours">hours</string>
+    <string name="title_activity_students">StudentsActivity</string>
+    <string name="status">Status</string>
+    <string name="studying">Studying</string>
+    <string name="finished">Finished</string>
 </resources>
